--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,9 @@
 	<name>glitchreporter</name>
 	<description>Glitch Reporter - bug reporting app</description>
 	<properties>
-		<java.version>17</java.version>
+	<java.version>19</java.version>
+    <maven.compiler.source>19</maven.compiler.source>
+    <maven.compiler.target>19</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -78,6 +80,15 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-compiler-plugin</artifactId>
+			    <configuration>
+			        <source>19</source>
+			        <target>19</target>
+			    </configuration>
 			</plugin>
 		</plugins>
 	</build>
