--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
-spring.datasource.url=jdbc\:mysql\://avnadmin\:AVNS_2UkzfeUN_zPF93rdi3-@mysql-1326f46a-glitchreporter.aivencloud.com\:22409/glitchreporter?ssl-mode\=REQUIRED
+spring.datasource.url=jdbc:mysql://avnadmin:AVNS_2UkzfeUN_zPF93rdi3-@mysql-1326f46a-glitchreporter.aivencloud.com:22409/glitchreporter?ssl-mode=REQUIRED
 spring.datasource.username=avnadmin
 spring.datasource.password=AVNS_2UkzfeUN_zPF93rdi3-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 glitchreporter.app.jwtSecret=boletomonYfangria24soletomonYpangria27coletomonYmangria31
 glitchreporter.app.jwtExpirationMs=86400000
-
